# MyAI

./: .gitignore  DEMO_GUIDE.md  FOR_WILDER.md  README.md  SETUP_GUIDE.md  USAGE_GUIDE.md  landing.html  test_integration.py  test_simple.py
.claude/: settings.local.json
myai-mvp/: Cargo.toml  Makefile  README.md
myai-mvp/config/: default.toml
myai-mvp/crates/eval/: Cargo.toml
myai-mvp/crates/eval/src/: main.rs
myai-mvp/crates/ingest/: Cargo.toml
myai-mvp/crates/ingest/src/: chunker.rs  handlers.rs  lib.rs
myai-mvp/crates/models/: Cargo.toml
myai-mvp/crates/models/src/: embedding.rs  lib.rs  reranker.rs
myai-mvp/crates/retrieval/: Cargo.toml
myai-mvp/crates/retrieval/src/: lib.rs
myai-mvp/crates/server/: Cargo.toml
myai-mvp/crates/server/src/: lib.rs
myai-mvp/crates/storage/: Cargo.toml
myai-mvp/crates/storage/src/: hnsw_store.rs  lib.rs  tantivy_store.rs
myai-mvp/crates/types/: Cargo.toml
myai-mvp/crates/types/src/: lib.rs
myai-mvp/samples/: sample1.txt  sample2.txt
myai-mvp/src/: main.rs
myai-mvp/static/: index.html
myai_ux/: README.md  pubspec.yaml
myai_ux/android/: local.properties
myai_ux/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
myai_ux/assets/: README.md
myai_ux/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
myai_ux/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
myai_ux/lib/: main.dart  main_backup.dart  main_simple.dart
myai_ux/lib/models/: knowledge_graph.dart
myai_ux/lib/screens/: startup_screen.dart
myai_ux/lib/services/: api_service.dart  demo_data.dart  model_service.dart  ollama_client.dart
myai_ux/lib/widgets/: demo_controls.dart  enhanced_graph_widget.dart  enhanced_llm_panel.dart  knowledge_graph_widget.dart  llm_export_panel.dart  simple_graph_widget.dart  simple_llm_panel.dart
myai_ux/test/: widget_test.dart
myai_ux/web/: manifest.json
myai_ux/windows/: CMakeLists.txt
myai_ux/windows/runner/: Runner.rc  main.cpp
nexus-mvp/: Cargo.toml  README.md
nexus-mvp/crates/eval/src/: main.rs
nexus-mvp/crates/storage/src/: database.rs
nexus_ux/: README.md  pubspec.yaml
nexus_ux/android/app/src/main/: AndroidManifest.xml
nexus_ux/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
nexus_ux/ios/Runner/: GeneratedPluginRegistrant.m
nexus_ux/lib/: main.dart
nexus_ux/macos/Runner.xcodeproj/: project.pbxproj
nexus_ux/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
nexus_ux/macos/Runner/Configs/: AppInfo.xcconfig
nexus_ux/test/: widget_test.dart
nexus_ux/web/: index.html
