[workspace]
members = [
    "crates/types",
    "crates/models", 
    "crates/storage",
    "crates/ingest",
    "crates/retrieval",
    "crates/server",
    "crates/eval",
]

[package]
name = "myai-mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "crates/types" }
models = { path = "crates/models" }
storage = { path = "crates/storage" }
ingest = { path = "crates/ingest" }
retrieval = { path = "crates/retrieval" }
server = { path = "crates/server" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }

[workspace.dependencies]
# HTTP/WebSocket
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"
tokio-tungstenite = "0.21"
futures = "0.3"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# API Documentation
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = "7"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
mime_guess = "2"
walkdir = "2"
notify = "6"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"

# Search/ANN
tantivy = "0.22"
hnsw_rs = "0.6"

# Models (ONNX)
ort = { version = "2", features = ["download-binaries"] }
tokenizers = "0.19"
ndarray = "0.15"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
sled = "0.34"

# Security (future)
ring = "0.17"
argon2 = "0.5"
