[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
