[package]
name = "retrieval"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
models = { path = "../models" }
storage = { path = "../storage" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
