[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
models = { path = "../models" }
storage = { path = "../storage" }
retrieval = { path = "../retrieval" }
ingest = { path = "../ingest" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
